crates/tsuno-driver/tests/fixtures/snapshots/pass/named_lemma_parameter_is_admissible.rs
fn main() {
    /*@
    fn trivial_nat(n: Nat)
      req true
      ens true
    {
    }
    */
    //@ trivial_nat(Nat::Succ(Nat::Zero));
}
