crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_function_contract_position.rs
//@ req true
//@ ens true
fn rejects_legacy_function_contract_position() {}

fn main() {}
